added title and some tags

--- a/abc.html
+++ b/abc.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Peter</title>
+    <title>PoraAcademy</title>
 </head>
 <body>
-    
+    <h1>Peter</h1>
+    <h2>Kgama</h2>
+    <h3>Pora</h3>
 </body>
 </html>
